--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./public/note-42883.svg" type="image/x-icon">
     <title>paste-notes-saver</title>
   </head>
   <body>
