--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
       href="./public/note-42883.svg"
       type="image/x-icon"
     />
-    <link rel="shortcut icon" href="./public/note-42883.svg" type="image/x-icon">
-    <!-- Google Font: Orbitron -->
+    <link
+      rel="shortcut icon"
+      href="./public/note-42883.svg"
+      type="image/x-icon"
+    />
+    <!-- Google Font: -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="./public/note-42883.svg" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./public/note-42883.svg"
+      type="image/x-icon"
+    />
     <title>paste-notes-saver</title>
   </head>
   <body>
